# passport-spaghett-eth-main

./: README.md
.do/: backend.yaml  create-backend
api/: .env.example  Cargo.toml  Dockerfile  README.md  Rocket.toml
api/scripts/docker/: build  run
api/src/: main.rs
api/src/libs/: cors.rs  db.rs  mod.rs  responses.rs
api/src/libs/eth/: db.rs  events.rs  mod.rs  read.rs  write.rs
api/src/libs/eth/abis/: passport.json  resolver.json
api/src/modules/: checks.rs  mod.rs
api/src/modules/admins/: model.rs  routes.rs
api/src/modules/checkpoints/: crud.rs  mod.rs  model.rs  routes.rs
api/src/modules/passport/: crud.rs  mod.rs  model.rs  routes.rs
app/: .env  .gitignore  Dockerfile  app.vue  nuxt.config.ts  package.json
app/components/: AddressButton.vue  Alert.vue  CheckpointDetails.vue  ConnectModal.vue  FooterApp.vue  LeaderboardTab.vue  Loader.vue  MainContent.vue  MegoWallet.vue  ScanTab.vue  SocialShare.vue  UserInfo.vue
app/docker/: build  run
app/fonts/: stylesheet.css
app/mixins/: checkViewport.js  dataFormatting.js
app/pages/: index.vue  profile.vue
app/plugins/: analytics.client.js
app/stores/: web3Store.js
app/styles/: animation.scss  main.scss  responsive.scss
contract/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
contract/checkpoints/: example.csv
contract/configs/: example.json
contract/contracts/: Base64.sol  PassportResolver.sol  SpaghettETHPassport.sol
contract/libs/: address_generator.js
cron/: .env  cron.js  package.json
qr/: .env  Dockerfile  index.html  package.json
(+76 files in other folders)
